--- a/config/values.yaml
+++ b/config/values.yaml
@@ -1,3 +1,12 @@
-organization:
+organizations:
   - name: "jpedroza-dev"
     email: "pedrozajoaopedro@gmail.com"
+    workspaces:
+      - name: "ansible-vault-example"
+        variables:
+          - key: "root_token"
+            value: "root"
+            description: "Root token do Vault para acesso do provider."
+        tags:
+          - ansible
+          - vault
